Replacing StringBuffers with StringBuilders where applicable